tests/ui/set_ard.stderr
error[E0597]: `desc` does not live long enough
  --> $DIR/set_ard.rs:37:54
   |
37 |     stmt.SQLSetStmtAttrA(SQL_ATTR_APP_ROW_DESC, Some(&desc));
   |                                                      ^^^^^ borrowed value does not live long enough
...
41 | }
   | -
   | |
   | `desc` dropped here while still borrowed
   | borrow might be used here, when `stmt` is dropped and runs the `Drop` code for type `SQLHSTMT`
   |
   = note: values in a scope are dropped in the opposite order they are defined

error[E0505]: cannot move out of `desc` because it is borrowed
  --> $DIR/set_ard.rs:39:13
   |
37 |     stmt.SQLSetStmtAttrA(SQL_ATTR_APP_ROW_DESC, Some(&desc));
   |                                                      ----- borrow of `desc` occurs here
38 |
39 |     let _ = desc.SQLFreeHandle();
   |             ^^^^ move out of `desc` occurs here
40 |     let _ = stmt.SQLFreeHandle();
   |             ---- borrow later used here
